# AH_LCG

./: .gitignore  pyproject.toml  structure.py
ah_lcg/: Jacquilyne_Fine_special.py  checking.py  for_init_game.py  funcs_for_input.py  interface.py  new_game.py  print_logs.py  probability.py  probability_for_action.py  sdeglsjkef.py  structure.py  tablica.py  test.py
ah_lcg/funcs/: colored_keywords.py  funcs_for_input.py  print_logs.py  prob_funcs.py  tablica.py
ah_lcg/game_data/: Enemies.py  Roland_Banks.py  cards.py  colored_keywords.py  dialog_interface.py  fast_token_value.py  func_for_writing_logs.py  input_checking.py  investigators.py  investigators_list.py  prob_funcs.py  scenario_token_value.py
ah_lcg/logs/: func_for_writing_logs.py
funcs/: colored_keywords.py  funcs_for_input.py  input_checking.py  print_logs.py  tablica.py
game_data/: campaign_data.json  cards.py  fast_token_value.py  func_for_collect.py  tokens_n_bags.py
