[tool.poetry]
name = "AH_LCG"
version = "0.1.0"
description = ""
authors = ["EgorVjalkov <e.vjalkov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.5"

[tool.poetry.scripts]
PU = "ah_lcg.interface:main"
logs = "ah_lcg.print_logs:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
